--- a/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner.Tester/App.config
+++ b/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner.Tester/App.config
@@ -77,6 +77,9 @@
       <setting name="ArchiveDirectoryForFailedDeletedFiles" serializeAs="String">
         <value >D:\temp5\Scanner\FailedDeletedFiles</value>
       </setting>
+      <setting name="ArchiveDirectoryForUnsupportedFiles" serializeAs="String">
+        <value>         D:\temp5\Scanner\UnsupportedFilesTypes        </value>
+      </setting>
     </CvLocate.CvFilesScanner.Properties.Settings>
   </applicationSettings>
   <startup>
