Add Simple Injector IOC

--- a/CvLocateSourceCode/packages/repositories.config
+++ b/CvLocateSourceCode/packages/repositories.config
@@ -2,6 +2,12 @@
 <repositories>
   <repository path="..\Common\CvLocate.Common\packages.config" />
   <repository path="..\Common\DocumentConverter\packages.config" />
+  <repository path="..\Core\CvLocate.Core.Tester\packages.config" />
+  <repository path="..\Core\CvLocate.Core\packages.config" />
+  <repository path="..\Core\ParsingEngine\CvLocate.ParsingEngine.Tester\packages.config" />
+  <repository path="..\Core\ParsingEngine\CvLocate.ParsingEngine\packages.config" />
+  <repository path="..\CvFilesScanner\CvLocate.CvFilesScanner.Tester\packages.config" />
+  <repository path="..\CvFilesScanner\CvLocate.CvFilesScanner\packages.config" />
   <repository path="..\CvLocate.Common\packages.config" />
   <repository path="..\CvLocate.DBFacade.MongoInfractures\packages.config" />
   <repository path="..\CvLocate.EmailListener.Tester\packages.config" />
@@ -10,4 +16,5 @@
   <repository path="..\DBComponent\CvLocate.DBComponent.MongoDB\packages.config" />
   <repository path="..\DBComponent\DBFacades\CvLocate.DBComponent.FilesDBFacade\packages.config" />
   <repository path="..\EmailServer\CvLocate.EmailListener.Tester\packages.config" />
+  <repository path="..\EmailServer\CvLocate.EmailListener\packages.config" />
 </repositories>
