--- a/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
+++ b/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
@@ -36,6 +36,9 @@
     <Reference Include="log4net">
       <HintPath>..\..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\..\..\packages\SimpleInjector.3.1.3\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,6 +60,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="CvFileExample.doc" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
