--- a/CvLocateSourceCode/EmailServer/CvLocate.EmailListener.Tester/CvLocate.EmailListener.Tester.csproj
+++ b/CvLocateSourceCode/EmailServer/CvLocate.EmailListener.Tester/CvLocate.EmailListener.Tester.csproj
@@ -37,6 +37,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\..\packages\SimpleInjector.3.1.3\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
