--- a/CvLocateSourceCode/EmailServer/CvLocate.EmailListener/CvLocate.EmailListener.csproj
+++ b/CvLocateSourceCode/EmailServer/CvLocate.EmailListener/CvLocate.EmailListener.csproj
@@ -34,6 +34,9 @@
     <Reference Include="S22.Imap">
       <HintPath>ExternalDlls\S22.Imap.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\..\packages\SimpleInjector.3.1.3\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,6 +69,9 @@
       <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
       <Name>CvLocate.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
