--- a/CvLocateSourceCode/Common/CvLocate.Common.DbFacadeInterface/CvLocate.Common.DbFacadeInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.DbFacadeInterface/CvLocate.Common.DbFacadeInterface.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICvFilesDBFacade.cs" />
     <Compile Include="ICvFilesScannerDBFacade.cs" />
     <Compile Include="IEmailServerDBFacade.cs" />
     <Compile Include="ICoreDBFacade.cs" />
@@ -55,6 +56,10 @@
     <ProjectReference Include="..\CvLocate.Common.CoreDtoInterface\CvLocate.Common.CoreDtoInterface.csproj">
       <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
       <Name>CvLocate.Common.CoreDtoInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CvLocate.Common.CvFilesDtoInterface\CvLocate.Common.CvFilesDtoInterface.csproj">
+      <Project>{d82b5dd6-4de7-40e5-bd50-a09e017895f5}</Project>
+      <Name>CvLocate.Common.CvFilesDtoInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\CvLocate.Common.CvFilesScannerDtoInterface\CvLocate.Common.CvFilesScannerDtoInterface.csproj">
       <Project>{3263b227-652b-439c-ba95-4b3fef0d4bb1}</Project>
