--- a/CvLocateSourceCode/Common/CvLocate.Common.EmailServerDtoInterface/CvLocate.Common.EmailServerDtoInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.EmailServerDtoInterface/CvLocate.Common.EmailServerDtoInterface.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Command\BaseEmailServerCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result\GetEmailServerConfigurationResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
