--- a/CvLocateSourceCode/Common/CvLocate.Common.EmailServerDtoInterface/CvLocate.Common.EmailServerDtoInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.EmailServerDtoInterface/CvLocate.Common.EmailServerDtoInterface.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\BaseEmailServerCommand.cs" />
+    <Compile Include="DTO\EmailServerConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result\GetEmailServerConfigurationResult.cs" />
   </ItemGroup>
