New changes in DB

--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.MongoDB/app.config
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.MongoDB/app.config
@@ -1,8 +1,8 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <!-- See http://www.mongodb.org/display/DOCS/CSharp+Driver+Tutorial#CSharpDriverTutorial-Connectionstrings for more info -->
-    <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB"/>
-    <add name="MongoCvFilesDBSettings" connectionString="mongodb://localhost/CvFilesDB"/>
-  </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+    
+    <!-- See http://www.mongodb.org/display/DOCS/CSharp+Driver+Tutorial#CSharpDriverTutorial-Connectionstrings for more info --><add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB" />
+    <add name="MongoCvFilesDBSettings" connectionString="mongodb://localhost/CvFilesDB" />
+  <add name="MongoServerSettings" connectionString="mongodb://localhost/MyDatabase" /></connectionStrings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
