--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DbInterface/CvLocate.DBComponent.DbInterface.csproj
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DbInterface/CvLocate.DBComponent.DbInterface.csproj
@@ -40,9 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBEntities\CreateJobDBEntity.cs" />
     <Compile Include="DBEntities\CvFileDBEntity.cs" />
+    <Compile Include="DBEntities\JobDBEntity.cs" />
+    <Compile Include="DBEntities\RecruiterDBEntity.cs" />
+    <Compile Include="DBEntities\UpdateRecruiterDBEntity.cs" />
     <Compile Include="Exceptions\BaseMongoException.cs" />
     <Compile Include="Exceptions\MongoEntityNotFoundException.cs" />
+    <Compile Include="Exceptions\NullObjectException.cs" />
     <Compile Include="Exceptions\RequiredFieldsNullOrEmptyException.cs" />
     <Compile Include="Exceptions\SignInException.cs" />
     <Compile Include="Managers\ICandidateManager.cs" />
