--- a/CvLocateSourceCode/packages/repositories.config
+++ b/CvLocateSourceCode/packages/repositories.config
@@ -2,12 +2,8 @@
 <repositories>
   <repository path="..\Common\CvLocate.Common\packages.config" />
   <repository path="..\Common\DocumentConverter\packages.config" />
-  <repository path="..\CvLocate.Common\packages.config" />
-  <repository path="..\CvLocate.DBFacade.MongoInfractures\packages.config" />
-  <repository path="..\CvLocate.EmailListener.Tester\packages.config" />
-  <repository path="..\CvLocate.MongoDB.Common\packages.config" />
-  <repository path="..\CvLocate.MongoDB\packages.config" />
   <repository path="..\DBComponent\CvLocate.DBComponent.MongoDB\packages.config" />
+  <repository path="..\DBComponent\DBFacades\CvLocate.DBComponent.EndUserDBFacade\packages.config" />
   <repository path="..\DBComponent\DBFacades\CvLocate.DBComponent.FilesDBFacade\packages.config" />
   <repository path="..\EmailServer\CvLocate.EmailListener.Tester\packages.config" />
 </repositories>
